# Projeto_AED

./: .gitignore.txt  CMakeLists.txt  ClassOcupation.h  ClassSchedule.cpp  ClassSchedule.h  Classes necessárias para trabalho de Algoritmos.docx  DisplayStudentsInClass.h  DisplayStudentsInClassUcYear.h  LoadSchedule.h  LoadSclasses.h  LoadUc.h  Manager.cpp  Manager.h  Student.cpp  Student.h  StudentSchedule.h  Trabalho_Algortimos  UcTurma.cpp  UcTurma.h  classes_per_uc.csv  main.cpp
docs/: Doxyfile
docs/output/html/: _class_ocupation_8h_source.html  _class_schedule_8h_source.html  _load_schedule_8h_source.html  _load_sclasses_8h_source.html  _manager_8h_source.html  _student_8h_source.html  _uc_turma_8h_source.html  annotated.html  class_class_schedule-members.html  class_class_schedule.html  class_manager-members.html  class_manager.html  class_student-members.html  class_student.html  class_uc_turma-members.html  class_uc_turma.html  classes.html  dir_f4e982bca5d979afcf7d664254407d09.html  files.html  functions.html  functions_func.html  index.html
docs/output/html/search/: all_1.js  classes_0.js  classes_1.js  classes_2.js  searchdata.js
